--- a/stylesheet/reportico_joomla.css
+++ b/stylesheet/reportico_joomla.css
@@ -24,15 +24,35 @@ form,table,input,a,div
 .swPrpCritBox tbody tr td,
 .swPrpCritEntryBox,
 .swPrpCritEntryBox tbody tr td,
+.swRepCriteria tbody tr,
+.swRepCriteria tbody tr td,
+.swRepGrpHdrBox tbody tr,
+.swRepGrpHdrBox tbody tr td,
 .swRepPage tbody tr,
 .swRepPage tbody tr td
 {
     border: none !important;
 }
+.swRepPage th
+{
+    text-align: left;
+}
 
 #reportico_container
 {
     background-color: #ffffff;
+}
+
+.swPrpToolbarPane input
+{
+    float: right;
+    font-weight: 700;
+    margin: 10px 5px 0px 0px;
+    border: 1px solid #888888;
+    text-decoration: none;
+    background-color: #ffffff;
+    height: 32px;
+    cursor: pointer;
 }
 
 #swPrpSubmitPane input
@@ -519,6 +539,9 @@ a:visited
     border-collapse: collapse;
 }
 
+.swRepPageFormPage { border-bottom: solid thin #AAAAAA; }
+.swRepPageFormLine { border-bottom: solid thin #AAAAAA; }
+.swRepPageFormBlank { margin-bottom: 20px; }
 
 /* No Rows Information Message */
 .swRepNoRows
@@ -652,38 +675,53 @@ a:visited
 {
 }
 
-.swRepRefreshBox,
-.swRepBackBox
+.swCSVBox, .swHTMLBox, .swPDFBox, .swPrintBox, .swXMLBox, .swJSONBox
 {
+    width: 30px !important;
     text-align: left;
-    font-size: 14pt ;
-    padding: 5px 5px 5px 5px;
-    margin: 5px 0px 5px 0px;
+    padding: 0px;
+    margin: 0px 0px 0px 0px;
+    background-repeat: no-repeat;
     text-decoration: none;
     float: left;
 }
 
-.swRepBackButton 
-{ 
-    border: solid;
-    border-width: 1px;
-    border-color : #000000;
-    background-color : #FFFFFF;
-    text-align: left;
-    font-size: 12pt ;
-    font-weight: bold;
-    padding: 5px 5px 5px 5px;
-    text-decoration: none;
+.swHTMLBox { background-image: url(../images/printhtml.png); }
+.swCSVBox { background-image: url(../images/printcsv.png); }
+.swPDFBox { background-image: url(../images/printpdf.png); }
+.swJSONBox { background-image: url(../images/printjson.png); }
+.swXMLBox { background-image: url(../images/printxml.png); }
+.swPrintBox { background-image: url(../images/printablehtml.png); }
+
+.swRepRefreshBox,
+.swRepPrintBox,
+.swRepBackBox
+{
+    width: 38px;
+    height: 38px;
+    margin: 0px 0px 0px 0px;
+    float: left;
 }
+
+.swRepPrintBox .swLinkMenu,
+.swRepRefreshBox .swLinkMenu,
+.swRepBackBox .swLinkMenu
+{
+    width: 32px;
+    text-align: left;
+    padding: 0px;
+    margin: 2px 5px 2px 5px;
+    text-decoration: none;
+    float: left;
+}
+
+.swRepPrintBox .swLinkMenu { background-image: url(../images/printer.png); }
+.swRepRefreshBox .swLinkMenu { background-image: url(../images/refreshbutton.png); }
+.swRepBackBox .swLinkMenu { background-image: url(../images/backbutton.png); }
 
 .swRepBackButton:hover 
 {
     background: #e5ecf9;
-}
-
-tr td.swRepResultGraph
-{
-    text-align: center;
 }
 
 
@@ -1028,7 +1066,8 @@ tr td.swRepResultGraph
         color : #000000;
     }
 
+    .swNewPage { page-break-before: always; }
+
     .swRepTitle { font-size: 18pt; text-align: center; margin-top: 0px; border: none;}
     .swMntForm { text-align: left; margin-left: 0%; background-color: #ffffff; border: none; }
-    @page { margin-top: 200; padding-top : 100px; }
 }
