Removed spurious curly bracket

--- a/css/reportico_bootstrap.css
+++ b/css/reportico_bootstrap.css
@@ -1133,10 +1133,10 @@ input.swAdminButton2
 
     .swLastPageFooterBlock { display: block; }
     .swNewPageHeaderBlock { display: block; } 
-    .swPageBlock { padding-bottom: 200px }}
+    .swPageBlock { padding-bottom: 200px }
     /*.sswPageFooterBlock { display: block; width: 100%; position: fixed; bottom: 0; }
     .swPageFooterBlock { position: fixed; bottom: 0;}
-    .swPageBlock { padding-bottom: 200px }}*/
+    .swPageBlock { padding-bottom: 200px }*/
 
    #whiteBg {
       display: block;
