Style sheets modified to ensure that - <a> links in reports print without HTML in browser print and preview - Charts correctly get printed over a page break

--- a/css/reportico_bootstrap.css
+++ b/css/reportico_bootstrap.css
@@ -1171,7 +1171,15 @@ input.swAdminButton2
     .swRepResultLine td a
     {
         text-decoration: underline;
-    color: #ff0000;
+        color: #ff0000;
+    }
+
+    a[href]:after {
+          content: none !important;
+    }
+
+    .swRepResultGraph {
+        page-break-inside: avoid;
     }
 }
 
