Updates local bootstrap 2 and 3 libraries to latest versions Implemented new Criteria Help Text field which appears as a tooltip help hover text box on criteria entry screen

--- a/css/reportico.css
+++ b/css/reportico.css
@@ -654,6 +654,8 @@ a:visited
 {
 }
 
+.swHelpIcon { float: left;height: 20px; width: 14px; background-image: url(../images/help.png) !important; }
+
 .swCSVBox, .swHTMLBox, .swPDFBox, .swPrintBox, .swXMLBox, .swJSONBox
 {
     width: 30px !important;
