- Ability to enter design mode without password using __OPENACCESS__ admin password - Hide the show report elements panel by default except for criteria show option - New look bootstrap Page Style - New look report front end icons for report running - Removal of unnecessary widgets, field and content in admin configure and create project pages - Use of help tooltips to guid user in setting up new project

--- a/css/reportico.css
+++ b/css/reportico.css
@@ -18,7 +18,7 @@ form,table,input,a,div
     float: right;
     font-weight: 700;
     margin: 10px 5px 0px 0px;
-    border: 1px solid #888888;
+    border: none;
     text-decoration: none;
     background-color: #ffffff;
     height: 32px;
