--- a/css/reportico.css
+++ b/css/reportico.css
@@ -17,11 +17,11 @@ form,table,input,a,div
 {
     float: right;
     font-weight: 700;
-    margin: 10px 5px 0px 0px;
-    border: none;
+    margin: 0px 5px 0px 0px;
+    border: 0px solid #888888;
     text-decoration: none;
     background-color: #ffffff;
-    height: 32px;
+    height: 42px !important;
     cursor: pointer;
 }
 
@@ -658,7 +658,7 @@ a:visited
 
 .swCSVBox, .swHTMLBox, .swPDFBox, .swPrintBox, .swXMLBox, .swJSONBox
 {
-    width: 30px !important;
+    width: 42px !important;
     text-align: left;
     padding: 0px;
     margin: 0px 0px 0px 0px;
@@ -701,7 +701,7 @@ a:visited
 .swRepRefreshBox .swLinkMenu,
 .swRepBackBox .swLinkMenu
 {
-    width: 32px;
+    width: 40px;
     text-align: left;
     padding: 0px;
     margin: 2px 5px 2px 5px;
