Added collapsible criteria groupings                                                                                                                                    Add Save Report box to criteria entry screen Remove "Show Column Headers" option and treat as detail

--- a/css/reportico_bootstrap.css
+++ b/css/reportico_bootstrap.css
@@ -26,6 +26,11 @@
     cursor: pointer;
 }
 
+.swDisplayGroupLine td
+{
+    background-color: #eeeeff;
+}
+
 #swPrpSubmitPane input
 {
     float: right;
@@ -269,6 +274,20 @@ a:visited
     text-decoration: none;
 }
 
+.swToggleCriteria, .swToggleCriteria:link, .swToggleCriteria:visited
+{ 
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-right: 5px;
+    text-align: center;
+    background-color: #337ab7;
+    color: #ffffff;
+    font-size: larger;
+    font-weight: bold;
+    border: none;
+    text-decoration: none;
+}
+
 .swAdminButton2
 { 
     line-height: inherit !important;
@@ -306,17 +325,17 @@ input.swAdminButton2
     color: #000000;
     text-decoration: none;
     border: 1px solid #D0CCC9;
-    background-color: #EFEFEF;
+    /*background-color: #EFEFEF;*/
     padding-top: 5px;
     padding-bottom: 5px;
 }
 
-.swLinkMenu:hover
+/*.swLinkMenu:hover
 {
     border: solid thin #000000;	
     color: #000000 !important;
     background-color: #F2F2f2 !important;
-}
+}*/
 
 /* ------------------------------------------------------------------------------------*/
 /* -----------------------------Styles for Prepare Execute Mode -----------------------*/
