--- a/css/reportico.css
+++ b/css/reportico.css
@@ -236,14 +236,14 @@ a:visited
     color: #7070CC !important;
 }
 
-.swToggle, .swToggle:link, .swToggle:visited
+.swToggle, .swToggleCriteria, .swToggleCriteria.link, .swToggle:link, .swToggle:visited
 { 
     padding-right: 5px;
     padding-left: 5px;
     margin-right: 5px;
     text-align: center;
     background-color: #000000;
-    color: #ffffff;
+    color: #ffffff !important;
     font-size: larger;
     font-weight: bold;
     border: none;
