--- a/css/coolandlight.css
+++ b/css/coolandlight.css
@@ -38,7 +38,7 @@ form,table,input,a,div
 
 .icon-48-reportico
 {
-    background: url('../images/icon-reportico-48.png') no-repeat left;`I   
+    background: url('../images/icon-reportico-48.png') no-repeat left;
 }
 
 .swPrpCritSel select
@@ -82,6 +82,7 @@ form,table,input,a,div
 }
 .swDateField { width: 100px; }
 
+/* Why double {} ? */
 .swPrpTextField { width: 100%; }
 {
     margin: 0px 0px 0px 0px;
