--- a/stylesheet/reportico_joomla.css
+++ b/stylesheet/reportico_joomla.css
@@ -69,7 +69,7 @@ form,table,input,a,div
 
 .icon-48-reportico
 {
-    background: url('../images/icon-reportico-48.png') no-repeat left;`I   
+    background: url('../images/icon-reportico-48.png') no-repeat left;
 }
 
 .swPrpCritSel select
@@ -113,6 +113,7 @@ form,table,input,a,div
 }
 .swDateField { width: 100px; }
 
+/* Why double {} ? */
 .swPrpTextField { width: 100%; }
 {
     margin: 0px 0px 0px 0px;
