Improved styling in design mode

--- a/templates/bootstrap3/css/reportico_bootstrap.css
+++ b/templates/bootstrap3/css/reportico_bootstrap.css
@@ -741,6 +741,14 @@ input.swAdminButton2
 .swXMLBox { background-image: url(../images/printxml.png) !important; }
 .swPrintBox { background-image: url(../images/printablehtml.png) !important; }
 
+.swMiniMntForm
+{
+    background-color : #f4f4f4;
+    border-color : #BBCCFF;
+    padding: 1px 1px 1px 1px;
+    font-size: 10pt;
+}
+
 .swMiniMaintain
 {
     height: 30px !important;
@@ -846,7 +854,7 @@ input.swAdminButton2
 {
     width: 100%;
     border: solid;
-    background-color : #BBCCFF;
+    background-color : #FF0000;
     border-color : #BBCCFF;
     border-width : 0px;
     color: #000000;
@@ -872,9 +880,8 @@ input.swAdminButton2
 
 .swMntMidSection
 {
-   /* width: 216px;
-    background-color: #eeeeff;*/
-    border-right: solid black 1px;
+   width: 216px;
+   padding-right: 10px;
 }
 
 .swMntUpDownButtonCell
@@ -935,7 +942,7 @@ input.swAdminButton2
 .swMntInnerBox
 {
     width: 100%;
-    border: 2px solid #CCCCFF;
+    /*border: 2px solid #CCCCFF;*/
     /*background-color : #000000;*/
     padding: 5px 5px 5px 5px;
     margin: 0px 0px 0px 0px;
@@ -966,6 +973,7 @@ input.swAdminButton2
 
 .swMntTabMenuCellUnsel
 { 
+    background-color: #e0e0ff;
     border: 1px solid #bbb;
 }
 /* -------------- End Horizontal Menu Buttons ---------------------- */
@@ -1044,10 +1052,8 @@ input.swAdminButton2
 
 .swMntRowBlock
 {
-    border: groove thin;
-    border-width: 2px;
-    vertical-align=text-top;
-    border-color : #DDFFDD;
+    border-bottom: solid 1px #ccc;
+    vertical-align: text-top;
     font-style: bold;
     font-size: 10pt;
     margin-left: 2%
@@ -1055,7 +1061,7 @@ input.swAdminButton2
 
 .swMntSetField
 {
-    background-color : #f4f4f4;
+    /*background-color : #f4f4f4;*/
     border-color : #BBCCFF;
     padding: 1px 1px 1px 1px;
     font-size: 10pt;
