--- a/assets/css/reportico.css
+++ b/assets/css/reportico.css
@@ -1076,6 +1076,7 @@ a:visited
 @media print {
 
     .reportico-ajax-link { display: none; }
+    .swLinkMenu { display: none; }
     .swRepForm { border: none; }
     .swRepBody { width: 100%; margin: 0; border: none; }
 /* Column Header Label  */
