--- a/views/bootstrap3/css/reportico_bootstrap.css
+++ b/views/bootstrap3/css/reportico_bootstrap.css
@@ -1363,3 +1363,39 @@ border-top: 1px solid #e5e5e5;
     height:0px;
     visibility: hidden;
 }
+
+/* Styles for NVD3 charts */
+
+/* Chart Title */
+.reportico-chart-title {
+  font: normal 16pt sans-serif !important;
+}
+
+/* Chart Default Text */
+.nvd3 text {
+  font: normal 12pt sans-serif !important;
+}
+
+/* Axis Tick Styles */
+.nvd3 .axis .tick text,
+.nvd3 .axis .nv-axisMaxMin text
+{
+  font: normal 10pt sans-serif !important;
+}
+
+/* Axis Title Styles */
+.nvd3 .nv-axislabel {
+  font: normal 14pt sans-serif !important;
+}
+
+/* Legend Styles */
+.nvd3 .nv-series text {
+  font: normal 10pt sans-serif !important;
+}
+/* Title Styles */
+.nvd3 .title {
+  font: normal 16px sans-serif !important;
+}
+.nvtooltip {
+  font-family: sans-serif !important;
+}
