--- a/views/default/css/reportico_bootstrap.css
+++ b/views/default/css/reportico_bootstrap.css
@@ -527,7 +527,7 @@ input.swAdminButton2
 /* -----------------------------Styles for EXECUTE Execute Mode -----------------------*/
 /* ----------------------------- i.e for the HTML Report Output -----------------------*/
 /* Report Title Header */
-.swRepTitle 
+.reportico-title 
 { 
     font-size: 18pt;
     text-align: center;
@@ -539,7 +539,7 @@ input.swAdminButton2
 }
 
 /* Table container for whole Report */
-.swRepBody 
+.reportico-body 
 { 
     width: 90%;
     margin-left: 5%;
@@ -600,15 +600,15 @@ input.swAdminButton2
 }
 
 /* Container for Group Headers  */
-.swRepResultLine td
+.reportico-row td
 {
     padding: 2px 2px 1px 2px;
 }
 
-/*.swRepResultLine:nth-child(even) { background-color: inherit; }
-.swRepResultLine:nth-child(odd) { background-color: inherit; }*/
+/*.reportico-row:nth-child(even) { background-color: inherit; }
+.reportico-row:nth-child(odd) { background-color: inherit; }*/
 
-.swRepResultLine td a
+.reportico-row td a
 {
     text-decoration: underline;
 }
@@ -649,7 +649,7 @@ input.swAdminButton2
     margin-right: auto;
 }
 
-.swRepResultGraph
+.reportico-chart
 {
     margin: 0px 5px 0px 5px;
 }
@@ -1157,7 +1157,7 @@ input.swAdminButton2
     .swRepButtons { display: none; }
     .prepareAjaxExecuteIgnore { display: none; }
     .swRepForm { border: none; }
-    .swRepBody { width: 100%; margin: 0px; border: none; }
+    .reportico-body { width: 100%; margin: 0px; border: none; }
 
     .swLastPageFooterBlock { display: block; }
     .swNewPageHeaderBlock { display: block; } 
@@ -1194,9 +1194,9 @@ input.swAdminButton2
     .swNewPageHeaderBlock { page-break-before: always; }
     /*.swNewPage { page-break-before: always; }*/
 
-    .swRepTitle { font-size: 18pt; text-align: center; margin-top: 0px; border: none;}
+    .reportico-title { font-size: 18pt; text-align: center; margin-top: 0px; border: none;}
     .swMntForm { text-align: left; margin-left: 0%; background-color: #ffffff; border: none; }
-    .swRepResultLine td a
+    .reportico-row td a
     {
         text-decoration: underline;
         color: #ff0000;
@@ -1206,7 +1206,7 @@ input.swAdminButton2
           content: none !important;
     }
 
-    .swRepResultGraph {
+    .reportico-chart {
         page-break-inside: avoid;
     }
 }
@@ -1356,6 +1356,12 @@ border-top: 1px solid #e5e5e5;
   font: normal 12pt sans-serif !important;
 }
 
+.reportico-dropdown {
+  z-index: 1001 !important;
+}
+
+
+/* ---------- STYLES FOR PDF CHARTS ----------*/
 /* Chart Default Text */
 .nvd3 text {
   font: normal 8pt sans-serif !important;
@@ -1384,6 +1390,35 @@ border-top: 1px solid #e5e5e5;
 .nvtooltip {
   font-family: sans-serif !important;
 }
-.reportico-dropdown {
-  z-index: 1001 !important;
+/* -------- END STYLES FOR HTML CHARTS --------*/
+
+/* ---------- STYLES FOR PDF CHARTS ----------*/
+/* Chart Default Text */
+.reportico-print-pdf * .nvd3 text {
+  font: normal 8pt sans-serif !important;
 }
+
+/* Axis Tick Styles */
+.reportico-print-pdf * .nvd3 .axis .tick text,
+.reportico-print-pdf * .nvd3 .axis .nv-axisMaxMin text
+{
+  font: normal 6pt sans-serif !important;
+}
+
+/* Axis Title Styles */
+.reportico-print-pdf * .nvd3 .nv-axislabel {
+  font: normal 6pt sans-serif !important;
+}
+
+/* Legend Styles */
+.reportico-print-pdf * .nvd3 .nv-series text {
+  font: normal 6pt sans-serif !important;
+}
+/* Title Styles */
+.reportico-print-pdf * .nvd3 .title {
+  font: normal 8pt sans-serif !important;
+}
+.nvtooltip {
+  font-family: sans-serif !important;
+}
+/* -------- END STYLES FOR PDF CHARTS --------*/
